<resources>
    <string name="app_name">TrackingSampleApp</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Round World!</string>
    <string name="title_activity_ppg_red">PpgRedActivity</string>
    <string name="ppg_red_header">Ppg Red</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="flush">FLUSH</string>
    <string name="live_data_header">Live Data</string>
    <string name="text_red_raw">Red Raw</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_bia">BiaActivity</string>
    <string name="title_activity_ppg_green">PpgGreenActivity</string>
    <string name="title_activity_ecg">EcgActivity</string>
    <string name="title_activity_heart_rate">HeartRateActivity</string>
    <string name="title_activity_accelerometer">AccelerometerActivity</string>
    <string name="title_activity_ppg_ir">PpgIrActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_spo2">SpO2Activity</string>
    <string name="bia_text_measuring_status">Status:</string>
    <string name="bia_text_body_fat_ratio">Body Fat Ratio(%)</string>
    <string name="bia_text_body_fat_mass">Body Fat Mass(Kg)</string>
    <string name="bia_text_total_body_water">Total Body Water(L)</string>
    <string name="bia_text_skeletal_muscle_ratio">Skeletal Muscle Ratio(%)</string>
    <string name="bia_text_skeletal_muscle_mass">Skeletal Muscle Mass(Kg)</string>
    <string name="bia_text_basal_metabolic_rate">Basal Metabolic Rate(KCal)</string>
    <string name="bia_text_fat_free_ratio">Fat Free Ratio(%)</string>
    <string name="bia_text_fat_free_mass">Fat Free Mass(Kg)</string>
    <string name="bia_text_progress">Progress</string>
    <string name="bia_tracker">BIA</string>
    <string name="text_count">count</string>
    <string name="text_placeholder">100</string>
    <string name="text_app_version">App Version : </string>
    <string name="accelerometer_text_accz">AccZ</string>
    <string name="accelerometer_text_accy">AccY</string>
    <string name="accelerometer_text_accx">AccX</string>
    <string name="accelerometer_tracker">Accelerometer</string>
    <string name="ECG">ECG</string>
    <string name="ecg1">Avg. ECG</string>
    <string name="ecg_lead_off">Lead Off</string>
    <string name="ecg_sequence">Sequence</string>
    <string name="ecg_green">PPG Green</string>
    <string name="ecg_threshold_max">Max Threshold</string>
    <string name="ecg_threshold_min">Min Threshold</string>
    <string name="hr_hr">HR</string>
    <string name="hr_ibi">HR IBI</string>
    <string name="hr_flag">HR FLAG</string>
    <string name="hr_status">HR STATUS</string>
    <string name="hr_tracker">HeartRate</string>
    <string name="ppg_green_header">PPG Green</string>
    <string name="ppg_ir_header">PPG IR</string>
    <string name="ppg_green_raw">Green Raw</string>
    <string name="text_ir_raw">IR Raw</string>
    <string name="title_activity_sweat_loss">SweatLossActivity</string>
    <string name="sweatloss_header">Sweat Loss</string>
    <string name="sweatloss_start">Start</string>
    <string name="sweatloss_stop">Stop</string>
    <string name="sweatloss_register">Register</string>
    <string name="sweatloss_time">00:00:00</string>
    <string name="sweatloss_distance">Dist</string>
    <string name="sweatloss_distance_value">0.0</string>
    <string name="sweatloss_spm">SPM</string>
    <string name="sweatloss_spm_value">0</string>
    <string name="sweatloss_tracker">Sweat Loss Tracker</string>
    <string name="sweatloss_raw">Sweat Loss</string>
    <string name="sweatLoss_status">Status</string>
    <string name="settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="profile_1">Profile 1</string>
    <string name="profile_2">Profile 2</string>
    <string name="default_up">Default</string>
    <string name="save">Save</string>
    <string name="spo2_status">Status</string>
    <string name="Spo2_hr">HR</string>
    <string name="spo2_tracker">SpO2</string>
    <string name="text_sdk_version">SDK Version : </string>
</resources>
