<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.wear.widget.BoxInsetLayout
        android:keepScreenOn="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/box_inset_layout_padding"
        tools:context=".HeartRateActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/hr_tracker"
                    android:textSize="@dimen/header_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/hr_tracker_start_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/custom_button"
                            android:text="@string/start"
                            android:textColor="@color/black"
                            tools:ignore="ButtonStyle" />

                        <Button
                            android:id="@+id/hr_tracker_stop_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/custom_button"
                            android:text="@string/stop"
                            android:textColor="@color/black"
                            tools:ignore="ButtonStyle" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/hr_tracker_flush_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/custom_button"
                        android:text="@string/flush"
                        android:textColor="@color/black" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ProgressBar
                            android:id="@+id/progress_bar"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="true"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/data_header"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/live_data_header_margin_top"
                        android:paddingStart="@dimen/live_data_padding_start"
                        android:text="@string/live_data_header"
                        android:textSize="@dimen/data_text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/hr_table_row_padding_left"
                        android:paddingEnd="@dimen/hr_table_row_padding_right">

                        <TextView
                            android:id="@+id/hr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/hr_table_col_padding"
                            android:text="@string/hr_hr"
                            android:textSize="@dimen/value_text" />

                        <TextView
                            android:id="@+id/hr_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:padding="@dimen/hr_table_col_padding"
                            android:text=""
                            android:textSize="@dimen/value_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/hr_table_row_padding_left"
                        android:paddingEnd="@dimen/hr_table_row_padding_right">

                        <TextView
                            android:id="@+id/hr_ibi"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/hr_table_col_padding"
                            android:text="@string/hr_ibi"
                            android:textSize="@dimen/value_text" />

                        <TextView
                            android:id="@+id/hr_ibi_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:padding="@dimen/hr_table_col_padding"
                            android:text=""
                            android:textSize="@dimen/value_text" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/hr_table_row_padding_left"
                        android:paddingEnd="@dimen/hr_table_row_padding_right">

                        <TextView
                            android:id="@+id/hr_flag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="@dimen/hr_table_col_padding"
                            android:text="@string/hr_status"
                            android:textSize="@dimen/value_text" />

                        <TextView
                            android:id="@+id/hr_flag_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:padding="@dimen/hr_table_col_padding"
                            android:text=""
                            android:textSize="@dimen/value_text" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </androidx.wear.widget.BoxInsetLayout>
</layout>
