<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.wear.widget.BoxInsetLayout
        android:keepScreenOn="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/box_inset_layout_padding">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/ppg_red_header"
                    android:textSize="@dimen/header_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ppg_red_start_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/custom_button"
                            android:text="@string/start"
                            android:textColor="@color/black" />

                        <Button
                            android:id="@+id/ppg_red_stop_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/custom_button"
                            android:text="@string/stop"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">
                        <ProgressBar
                            android:id="@+id/progress_bar"
                            style="@android:style/Widget.ProgressBar.Horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:indeterminate="true"
                            android:visibility="invisible" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/live_data_header_margin_top"
                        android:paddingStart="@dimen/live_data_padding_start"
                        android:text="@string/live_data_header"
                        android:textSize="@dimen/data_text" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingStart="@dimen/fall_table_row_padding_left"
                        android:paddingEnd="@dimen/fall_table_row_padding_right">

                        <TextView
                            android:id="@+id/red_raw"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.75"
                            android:padding="@dimen/fall_table_col_padding"
                            android:text="@string/text_red_raw"
                            android:textSize="@dimen/value_text" />

                        <TextView
                            android:id="@+id/red_raw_value"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:padding="@dimen/fall_table_col_padding"
                            android:text=""
                            android:textSize="@dimen/value_text" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.wear.widget.BoxInsetLayout>
</layout>
